--- a/alura-spa-projeto_inicial/styles/components/_navbar.scss
+++ b/alura-spa-projeto_inicial/styles/components/_navbar.scss
@@ -11,6 +11,9 @@ nav {
                 text-decoration: none;
                 font-weight: bold;
                 color: $cor-primaria;
+                &:hover {
+                    border-bottom: 3px solid $cor-secundaria;
+                }
             }
         }
     }
