--- a/alura-spa-projeto_inicial/styles/style.css
+++ b/alura-spa-projeto_inicial/styles/style.css
@@ -14,4 +14,7 @@ nav ul li a {
   text-decoration: none;
   font-weight: bold;
   color: #BE5A83;
+}
+nav ul li a:hover {
+  border-bottom: 3px solid #F2B6A0;
 }/*# sourceMappingURL=style.css.map */
