--- a/alura-spa-projeto_inicial/styles/style.css
+++ b/alura-spa-projeto_inicial/styles/style.css
@@ -17,4 +17,14 @@ nav ul li a {
 }
 nav ul li a:hover {
   border-bottom: 3px solid #F2B6A0;
+}
+
+.banner {
+  background: url(../imagens/banner.jpeg) 27% center no-repeat;
+  min-height: 350px;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.9;
 }/*# sourceMappingURL=style.css.map */
