--- a/alura-spa-projeto_inicial/styles/style.css
+++ b/alura-spa-projeto_inicial/styles/style.css
@@ -27,4 +27,19 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   opacity: 0.9;
+}
+.banner .inner-banner {
+  padding: 3rem;
+  background-color: #DEDEA7;
+  opacity: 0.9;
+  border-radius: 45px;
+  text-align: center;
+}
+.banner .inner-banner h1 {
+  font-size: 3rem;
+  color: #BE5A83;
+}
+.banner .inner-banner h2 {
+  font-size: 1.5rem;
+  color: #F2B6A0;
 }/*# sourceMappingURL=style.css.map */
