--- a/alura-spa-projeto_inicial/styles/style.css
+++ b/alura-spa-projeto_inicial/styles/style.css
@@ -142,4 +142,34 @@ nav ul li a:hover {
   color: #BE5A83;
   background-color: white;
   border: 2.5px solid #BE5A83;
+}
+
+footer {
+  text-align: center;
+  font-size: 1.5rem;
+  border-top: 2px solid #BE5A83;
+  margin-top: 1rem;
+  padding: 1.2rem;
+  background: linear-gradient(to left, #BE5A83, #F2B6A0, #DEDEA7, #BE5A83);
+}
+footer i {
+  color: red;
+}
+
+#curiosidades {
+  padding: 1rem;
+  text-align: center;
+  margin: 5px;
+}
+#curiosidades h3 {
+  color: #BE5A83;
+  font-size: 1.2rem;
+}
+#curiosidades h4 {
+  color: #F2B6A0;
+  font-size: 1rem;
+}
+#curiosidades p {
+  margin-top: 5px;
+  color: #BE5A83;
 }/*# sourceMappingURL=style.css.map */
